# cfar-algorithm-tester

./: CFAR.py  README.md  documentation.txt
data/: CFAR_parameters.json  consts.json  signal_objects.json
outdated/: BinFileManager.py  CFAR.py  Plots.py
output/: output.csv  two_hour_simulation_results.csv
src/: CFAR.cpp  CFAR.py  CMakeLists.txt  NoiseGenerator.py  Output.py  PlotForPoster.py  Plots.py  ProbabilitiesForMultipleThresholdFactors.py  Signal.cpp  SignalGenerator.py  SignalProperties.py  cfarmay.sln  cfarmay.vcxproj  cfarmay.vcxproj.filters  main.py  mytest.cpp
src/output/: outputCA.csv  outputGOCA.csv  outputSOCA.csv
